--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:postgres://localhost:5432/oneqdb
+server.contextPath=/oneq
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/oneqdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.thymeleaf.cache=false
