--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
-error.invalid.pass=\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u9055\u3044\u307E\u3059
+error.content=\u8CEA\u554F\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 error.signinForm.path=\u30D1\u30B9\u30B3\u30FC\u30C9\u304C\u9055\u3044\u307E\u3059
